--- a/src/styles.css
+++ b/src/styles.css
@@ -8,14 +8,14 @@
   
   body {
     margin: 0;
-    background: linear-gradient(to right, #a0ceea, #265475);
+    background: linear-gradient(to right, #1e1e1e, #000000);
   }
 
   .grid {
     display: grid;
     margin-top: 2rem;
     justify-content: center;
-    grid-template-columns: repeat(1, 6rem);
+    grid-template-columns: repeat(1, 25rem);
     grid-template-rows: minmax(7rem, auto) repeat(6, 6rem);
   }
 
@@ -26,10 +26,18 @@
     border: 1px solid white;
     outline: none;
     height: 50%;
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 10%;
     background-color: rgba(255, 255, 255, .75);
   }
   
   .grid > button:hover,
   .grid > button:focus {
     background-color: rgba(255, 255, 255, .9);
+  }
+
+  .duckImg {
+    width: 25rem;
+    height: fit-content;
   }
