--- a/src/styles.css
+++ b/src/styles.css
@@ -15,25 +15,24 @@
     display: grid;
     margin-top: 2rem;
     justify-content: center;
-    grid-template-columns: repeat(1, 25rem);
+    grid-template-columns: repeat(1, 30rem);
     grid-template-rows: minmax(7rem, auto) repeat(6, 6rem);
   }
 
-  .grid > button {
+  .newImage {
     border-radius: 5px;
     cursor: pointer;
-    font-size: 2rem;
+    font-size: 1rem;
     border: 1px solid white;
     outline: none;
-    height: 50%;
+    height: 30px;
     width: 50%;
     margin-left: 25%;
     margin-top: 10%;
-    background-color: rgba(255, 255, 255, .75);
+    background-color: rgb(253, 245, 0);
   }
   
-  .grid > button:hover,
-  .grid > button:focus {
-    background-color: rgba(255, 255, 255, .9);
-  }
 
+.duckImg{
+  margin-top: 5rem;
+}
